# nasa-impact-etci2021

./: .gitignore  README.md  architecture.py  combine_images.py  csv_gen.sh  ideas.txt  metrics.py  pipeline.py  pyproject.toml  requirements.txt  train.py  training.ipynb
docker/: Dockerfile.GPUTrain  Dockerfile.mlflow  docker-compose-raspberryPi.yaml
notebooks/: aug.ipynb  explore-data.ipynb
scripts/: architecture.py  combine_images.py  csv_gen.sh  double_unet.py  metrics.py  pipeline.py  train.py  utils.py
