[tool.poetry]
name = "nasa-impact-etci2021"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.4.1"
ipykernel = "^5.5.3"
mlflow = "^1.15.0"
pandas = "^1.2.4"
imageio = "^2.9.0"
scikit-learn = "^0.24.1"
tqdm = "^4.60.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
